src/objects/Zip__c.object
<CustomObject>
    <fields>
        <fullName>ACC__c</fullName>
        <label>Accessories - ACC</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALP__c</fullName>
        <label>Alterations + Preservation - ALP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAR__c</fullName>
        <label>Bar Services - BAR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDS__c</fullName>
        <label>Wedding Bands - BDS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BEA__c</fullName>
        <label>Beauty - BEA</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNB__c</fullName>
        <label>Bed and Breakfasts - BNB</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPH__c</fullName>
        <label>Boudoir Photographers - BPH</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BWP__c</fullName>
        <label>Bridal Salons - BWP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAC__c</fullName>
        <label>Ceremony Accessories - CAC</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAL__c</fullName>
        <label>Calligraphers - CAL</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAT__c</fullName>
        <label>Caterers - CAT</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CER__c</fullName>
        <label>Ceremony Venues - CER</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEC__c</fullName>
        <label>Decor - DEC</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DES__c</fullName>
        <label>Wedding Designers - DES</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DJS__c</fullName>
        <label>DJs - DJS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNC__c</fullName>
        <label>Dance Lessons - DNC</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DST__c</fullName>
        <label>Desserts - DST</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENS__c</fullName>
        <label>Ensembles + Soloists - ENS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAV__c</fullName>
        <label>Favors + Gifts - FAV</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIT__c</fullName>
        <label>Fitness - FIT</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLO__c</fullName>
        <label>Florists - FLO</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRB__c</fullName>
        <label>Hotel Room Blocks - HRB</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INV__c</fullName>
        <label>Invitations + Paper Goods - INV</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Canada__c</fullName>
        <formula>not(ISNUMBER(ZipCode__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS Canada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JWL__c</fullName>
        <label>Fine Jewelry - JWL</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LIT__c</fullName>
        <label>Lighting - LIT</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Local Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Zips</relationshipLabel>
        <relationshipName>Zips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MEN__c</fullName>
        <label>Menswear - MEN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MetroArea__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Metro Area</label>
        <referenceTo>MetroArea__c</referenceTo>
        <relationshipLabel>Zips</relationshipLabel>
        <relationshipName>Zips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NLW__c</fullName>
        <label>Newlywed Services - NLW</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPC__c</fullName>
        <label>Officiants + Premarital Counseling - OPC</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHB__c</fullName>
        <label>Photo Booths - PHB</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLN__c</fullName>
        <label>Wedding Planners - PLN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <description>The Portfolio is a grouping logic for Zip codes that offers a more refined distinguishing of zip codes from Markets. Will flow up to the account and lead objects based off of the zip code relationship that is saved on each one.</description>
        <inlineHelpText>Portfolio&apos;s should be used as a submarket relationship and a zip can only be related to one portfolio.</inlineHelpText>
        <label>Portfolio</label>
        <picklist>
            <picklistValues>
                <fullName>Senior Sales Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REC__c</fullName>
        <label>Reception Venues - REC</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REG__c</fullName>
        <label>Registry Services - REG</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNT__c</fullName>
        <label>Rentals - RNT</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPV__c</fullName>
        <label>Shower + Party Venues - SPV</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVS__c</fullName>
        <label>Service Staff - SVS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Zips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marshall Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TEC__c</fullName>
        <label>Technology - TEC</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRA__c</fullName>
        <label>Transportation - TRA</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRV__c</fullName>
        <label>Travel Specialists - TRV</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR__c</fullName>
        <label>Variety Acts - VAR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VHV__c</fullName>
        <label>Vacation Homes + Villas - VHV</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VID__c</fullName>
        <label>Videographers - VID</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WCK__c</fullName>
        <label>Wedding Cakes - WCK</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WJW__c</fullName>
        <label>Wedding Jewelry - WJW</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WPH__c</fullName>
        <label>Wedding Photographers - WPH</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <externalId>true</externalId>
        <label>Zip Code (External ID)</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Zip</label>
    <listViews>
        <fullName>All</fullName>
        <columns>REC__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Local_Market__c</columns>
        <columns>Portfolio__c</columns>
        <columns>MetroArea__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portfolio__c</field>
            <operation>equals</operation>
            <value>Senior Sales Executive</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>